    author name within brakets and the comment:

S <mave> comment goes here

   where S can be one of the following symbols:
    '+' : means that something has been added to NNFW
    '-' : means that something has been dropped from NNFW
    'B' : means a BugFix
    'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
==== End of Legend ====

    ==> 98 - 20/09/2006 <==

C <mave> BiasedCluster propertized
C <mave> SimpleCluster propertized
C <mave> Cluster propertized
C <mave> Updatable propertized
+ <mave> Variant now support OutputFunction pointers

    ==> 97 - 20/09/2006 <==

C <mave> nnfw.h also includes ionnfw header, now
C <mave> the method Cluster::setUpdater has been renamed to setFunction
C <mave> all subclasses of ClusterUpdater are changed accordlying;
           i.e. SigmoidUpdater to SigmoidFunction, etc
C <mave> ClusterUpdater class has been renamed to OutputFunction

    ==> 96 - 11/09/2006 <==

+ <mave> PropertySettings type: the base type for configuring object via Properties

    ==> 95 - 08/09/2006 <==

C <mave> CREDITS file

    ==> 94 - 08/09/2006 <==

B <mave> in result accessing in VectorData::neg()
B <mave> in reallocating memory in VectorData::resize()

    ==> 92 - 08/09/2006 <==

+ <marmir> Added three headers and 1 cpp: 
            modifier.h (abstract classes: Modifier, MatrixModifier and VectorModifier), 
            libmatrixmodifiers.h/cpp (with three matrixmodifiers), and 
            learningalgorithm.h (abstract learning algorithm)

    ==> 91 - 07/09/2006 <==

+ <marmir> Added functions compare, sum, and not for VectorData in vectordata.h
+ <marmir> Added implementation of >> operator for RealMat in ionnfw.cpp
+ <marmir> Added matrix() function to MatrixLinker
C <marmir> Generalized BinaryUpdater in StepUpdater (min e max are now settable)

    ==> 90 - 04/09/2006 <==

C <mave> prettified printing of boolean values of Variant
B <mave> fixed error in boolean constructor of Variant