@@ -27,26 +27,45 @@ namespace nnfw {
 
 /*! \brief FakeCluster Class. The FakeCluster is a Cluster without neurons, it's like an array ! :-)
  *
+ *  \par Motivation
+ *
+ *  \par Description
  *  The FakeCluster implemented the Cluster Interface so it can be inserted inside a BaseNeuralNet,
  *  but it doesn't contains neurons, but it contains a simple vector with values and inputs and outputs
  *  are alias name for this vector of data. <br>
  *  It's very useful for inputs layers that don't needs true neurons but only a vector where registry
  *  the sensors values.
  *
+ *  \par Warnings
+ *  Due to fact that outputs() are simple an alias, or more precisly a VectorData view, of inputs(),
+ *  this means that a call to resetInputs() method also resets the outputs!! In general, all methods
+ *  that modify inputs also modify outputs and viceversa.
+ *
  */
 class  FakeCluster : public Cluster {
 public:
+    /*! \name Constructors */
+    //@{
+
     /*! \brief Construct a FakeCluster
      *
      *  Details...
      */
     FakeCluster( u_int size, const char* name = "unnamed" );
 
+    /*! \brief Construct by PropertySettings
+     */
+    FakeCluster( PropertySettings& );
+
     /*! \brief Destructor
      *
      * Details...
      */
     virtual ~FakeCluster();
+
+    //@}
+    /*! \name Interface */
+    //@{
 
     /*! \brief Update ;-) It's do nothing !!
      */
@@ -55,6 +74,8 @@ public:
     /*! \brief Randomize ?!?! What means 'randomize a FakeCluster' ???
      */
     void randomize( Real min, Real max );
+
+    //@}
 
 };
 
